--- a/WEEK1/index.html
+++ b/WEEK1/index.html
@@ -11,6 +11,8 @@
     <body>
         <h1>CALCULATOR</h1>
         <h2>Refresher Course</h2>
+        <button id="themeToggle" class = "themeToggle">Toggle Dark/Light Mode</button>
+
 
         <div class ="Calculator">
             <div class="display">
